# progbase2

./: .gitignore
labs/lab4/: CMakeLists.txt  Makefile  main.c
labs/lab4/include/: CUI.h  func.h  lab_3.h  lectureCourse.h  list.h  storage.h
labs/lab4/src/: CUI.c  convert.c  func.c  lectureCourse.c  list.c  storage.c
labs/lab4/test/: Makefile  main.c
labs/lab5/: CMakeLists.txt  Makefile  main.c  out.json  out.txt  sample.txt  sample.xml
labs/lab5/include/: CUI.h  convert.h  lectureCourse.h  list.h  storage.h
labs/lab5/src/: CUI.c  convert.c  list.c  storage.c
labs/lab5/tests/: main.c
labs/lab6/build-lab6-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  lab6  moc_dialog.cpp  moc_mainwindow.cpp  ui_dialog.h  ui_mainwindow.h
labs/lab6/lab6/: dialog.cpp  dialog.h  dialog.ui  lab6.pro  lecturecourse.cpp  lecturecourse.h  lecturer.cpp  lecturer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
labs/lab7/lab7/: composition.cpp  composition.h  lab7.pro
tasks/build-qt_windows-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  moc_dialog.cpp  moc_mainwindow.cpp  qt_windows  ui_dialog.h  ui_mainwindow.h
tasks/callback/: CMakeLists.txt  Makefile  main.c
tasks/cpp/: CMakeLists.txt  main.cpp
tasks/cpp/include/: Ball.h  sphere.h
tasks/cpp/src/: Ball.cpp  sphere.cpp
tasks/events/: CMakeLists.txt  Makefile  events.h  list.c  list.h  main.c
tasks/events/src/: events.c
tasks/json/: CMakeLists.txt  Makefile  designer.json  designer.xml  main.c
tasks/json/include/: JsonLoader.h
tasks/json/src/: JsonLoader.c  designer.c
tasks/nlp/: Makefile  main.c  nlp.c  nlp.h  out.txt  storage.c  storage.h  text.txt
tasks/qt_windows/: designer.cpp  designer.h  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_windows.pro
tasks/qt_windows/untitled/: untitled.pro
tasks/tcp_client/build-client-Desktop-Debug/: Makefile  client
tasks/tcp_client/server/: CMakeLists.txt  text.txt
tasks/tcp_сlient/client/: client.pro  main.cpp
tasks/threads/: CMakeLists.txt  main.cpp
tasks/threads/include/: graphics.h
tasks/threads/src/: graphics.cpp
tasks/udp/: CMakeLists.txt  client.c  server.c
tasks/udp/include/: list.h  queue.h
tasks/udp/src/: list.c  queue.c
tasks/xml/: CMakeLists.txt  Makefile  designers2.xml  main.c
tasks/xml/include/: designer.h  xmlLoader.h
tasks/xml/src/: xmlLoader.c
